--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
     --color-zero: #000000;
     --color-pink: #FBDFDB;
     --color-seven: #777777;
+    --color-gray: #EEEEEE;
+    --color-nine: #999999;
 }
 
 * {
@@ -15,15 +17,12 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    margin-left: 230px;
-    margin-right: 230px;
 }
 
 header {
     display: grid;
     grid-template-columns: 1fr 3fr;
-    margin-top: 38px;
-    margin-bottom: 36px;
+    margin: 38px 230px 36px 230px;
 }
 
 header a {
@@ -38,6 +37,7 @@ header a {
     border-radius: 30px;
     display: grid;
     grid-template-columns: 1.5fr 1fr;
+    margin: 0 230px 0 230px;
 }
 
 .text-intro {
@@ -76,7 +76,7 @@ header a {
 }
 
 .intro-cards {
-    margin: 50px 0 20px 0;
+    margin: 50px 230px 20px 230px;
 }
 
 .intro-cards p {
@@ -85,10 +85,12 @@ header a {
     font-weight: bold;
 }
 
+#recipe-cards {
+    margin: 0 230px 0 230px;
+}
+
 .card {
-    max-width: 300px;
-   
-   
+    max-width: 300px;   
 }
 
 .image-content img {
@@ -117,4 +119,18 @@ header a {
     font-size: 14px;
     color: var(--color-seven);
     margin-bottom: 10px;
+}
+
+.footer {
+    background-color: var(--color-gray);
+    text-align: center;
+    width: fixed;
+    width: 100%;
+    bottom: 0;
+}
+
+.footer p {
+    padding: 23px;
+    font-size: 14px;
+    color: var(--color-nine);
 }
