--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     --color-gray: #EEEEEE;
     --color-nine: #999999;
     --color-four: #444444;
+    --color-f: #FFFFFF;
 }
 
 * {
@@ -176,4 +177,72 @@ header a {
     font-size: 18px;
     margin-bottom: 30px;
     line-height: 28px;
+}
+
+.modal-overlay {
+    background-color: rgba(0,0,0,0.6);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+}
+
+.modal {
+    background: var(--color-f);
+    border-radius: 16px;
+    width: 660px;
+    height: 413px;
+    opacity: 100%;
+    margin: 25vh auto;
+    position: relative;
+}
+
+.image-modal iframe {
+    position: absolute;
+    height: 200px;
+    width: 600px;    
+    top: 30px;
+    right: 30px;
+    left: 30px;
+    bottom: 183px;
+    border-radius: 15px;
+}
+
+.info-modal {
+    position: absolute;
+    top: 250px;
+    right: 164px;
+    bottom: 109px;
+    left: 164px;
+    text-align: center;    
+}
+
+.info-modal h1 {
+    padding-bottom: 5px;
+    font-weight: normal;
+    font-size: 24px;
+    color: var(--color-one);
+}
+
+.info-modal h2 {
+    font-weight: normal;
+    font-size: 18px;
+    color: var(--color-seven);    
+}
+
+.close-modal {
+    position: absolute;
+    top: 364px; 
+    right: 281px;
+    bottom: 30px; 
+    left: 281px;
+}
+
+.close-modal a{
+    font-size: 16px;
+    color: var(--color-nine);
+}
+
+.close-modal a:hover {
+    cursor: pointer;
 }
