--- a/style.css
+++ b/style.css
@@ -185,6 +185,8 @@ header a {
     width: 100%;
     height: 100%;
     top: 0;
+    opacity: 0;
+    visibility: hidden;
 }
 
 .modal {
@@ -245,4 +247,11 @@ header a {
 
 .close-modal a:hover {
     cursor: pointer;
+}
+
+/*=== MODAL ACTIVE ===*/
+
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
 }
